--- a/Archivos_de_prueba/Poster/TES/main.tex
+++ b/Archivos_de_prueba/Poster/TES/main.tex
@@ -18,7 +18,7 @@
 \usepackage{amsmath}
 \usepackage{lipsum}
 \usepackage[breaklinks=true,hidelinks]{hyperref}
-\definecolor{shadecolor}{RGB}{105, 48, 195}
+\definecolor{shadecolor}{RGB}{106, 4, 15}
 \definecolor{rb}{rgb}{0.025,0.5,0.9} 
 \definecolor{na}{RGB}{255,255,255}
 \definecolor{title}{RGB}{55, 0, 49} 
@@ -103,7 +103,7 @@ Para el cálculo de los tiempos de exposición solar se tomó como referencia la
    (Figura \ref{fig:cloud}).
  \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.68]{images/nubes.png}
+    \includegraphics[scale=0.68]{images/cloud2.eps}
     \caption{Factor de nubes (C\textsubscript{f}) que atenúa la irradiancia solar UV, en
     función del porcentaje de cobertura en el cielo. }
     \label{fig:cloud}
