--- a/Ejercicios/Version_final/main.tex
+++ b/Ejercicios/Version_final/main.tex
@@ -1,9 +1,9 @@
-\documentclass[12pt,letterpaper]{article}
+\documentclass[11pt,letterpaper]{article}
 \input{Files/package.tex}
 \pagestyle{empty}
 \parindent=0cm
 \begin{document}
-\input{Files/portada}
+\input{Files/Portada.tex}
 \tableofcontents
 \pagebreak
 \input{Files/resumen.tex}
@@ -11,5 +11,6 @@
 \input{Files/marco.tex}
 \input{Files/Hipotesis.tex}
 \input{Files/Procedimiento.tex}
+\input{Files/conclusiones.tex}
 \input{Files/references}
 \end{document}
